public interface Appareils {

    public void allumer();

    public void eteindre();
}
