@startuml
'https://plantuml.com/class-diagram

Appareil <|-- Lampe
Appareil <|-- Hifi
Appareil <|-- ChemineeAdaptateur
Appareil <|-- ThermostatAdaptateur
Telecommande "*" --> "*" Appareil: - appareils
ChemineeAdaptateur "1" --> "1" Cheminee: - cheminee
ThermostatAdaptateur "1" --> "1" Thermostat: - thermostat
'''classes
class Telecommande {
    - lampes: ArrayList
    + ajouterAppareil(Lampe)
    + activerAppareil(int)
    + desactiverAppareil(int)
    + activerTout()
    + toString()
}

interface Appareil {
    + allumer()
    + eteindre()
}

class Lampe {
    - nom: String
    - allume: boolean
    + allumer()
    + eteindre()
    + toString()
    + isAllume()
}

class Hifi {
    - son: int
    + allumer()
    + eteindre()
    + toString()
}

class Cheminee {
    - intensite: int
    + changerIntensite()
    + getLumiere()
    + toString()
}

class ChemineeAdaptateur {

    - cheminee: Cheminee
    + allumer()
    + eteindre()
}

class Thermostat {

    - temperature : int
    + paint()
    + monterTemperature()
    + baisserTemperature()
}

class ThermostatAdaptateur{

    - thermostat : Thermostat
    + allumer()
    + eteindre()
}
@enduml